--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -47,6 +47,7 @@
   "menuColors": "Colores",
   "menuTrash": "Papelera",
   "menuSetGeneral": "General",
+  "menuSetBrowser": "Navegador",
   "menuSetAbout": "Acerca de",
   "menuSetDevices": "Dispositivos",
   "menuAlertNoTags": "Sin etiquetas",
@@ -81,6 +82,8 @@
   "alertCopy": "Copiar",
   "alertClose": "Cerrar",
   "alertDoNotAsk": "No volver a preguntar",
+  "alertAllow": "Permitir",
+  "alertDeny": "Denegar",
   "appBeta": "ADVERTENCIA: versión beta, sólo para pruebas",
   "footerOpen": "Abrir / Nueva",
   "footerSyncError": "Error al sincronizar",
@@ -133,23 +136,24 @@
   "genPsPattern": "Patrón",
   "genPsPatternHelp": "Los patrones pueden utilizarse para especificar reglas personalizadas para seleccionar caracteres. Por ejemplo, 1-AA generará contraseñas que comiencen por un dígito, seguido de un guión y dos letras. Puedes usar estos símbolos:",
   "genPsAllRanges": "Todos los símbolos",
-  "genPsIncluded": "Símbolos adicionales agregados de categorías anteriores",
+  "genPsIncluded": "Símbolos adicionales añadidos anteriormente",
   "keyChangeTitleRemote": "Contraseña maestra cambiada",
   "keyChangeMessageRemote": "La contraseña maestra ha cambiado para esta base de datos. Introduce la nueva contraseña",
   "keyChangeTitleExpired": "Contraseña maestra caducada",
   "keyChangeMessageExpired": "La contraseña maestra de esta base de datos ha caducado. Introduce una nueva contraseña",
   "keyChangeRepeatPassword": "Contraseña, una vez más",
   "keyEnter": "Introducir",
+  "keyEsc": "Esc",
   "iconFavTitle": "Descargar y usar el favicon del sitio web",
   "iconSelCustom": "Escoge un icono personalizado",
   "listEmptyTitle": "Vacío",
-  "listEmptyAdd": "añadir con el botón {} arriba",
+  "listEmptyAdd": "añadir con el botón {} superior",
   "listGroup": "Grupo",
   "listNoWebsite": "sin sitio web",
   "listNoUser": "sin usuario",
   "listNoAttachments": "sin adjuntos",
   "listAddTemplateHeader": "Plantillas",
-  "listAddTemplateBody1": "Las plantillas permiten crear entradas con un solo clic. Añade información a la plantilla de entrada y después haz clic sobre {} de nuevo para usar esta plantilla.",
+  "listAddTemplateBody1": "Las plantillas permiten crear entradas con un solo clic. Añade información a la plantilla de la entrada y después haz clic sobre {} de nuevo para usar esta plantilla.",
   "listAddTemplateBody2": "Podrás encontrar tus plantillas en el grupo {}.",
   "searchAddNew": "Añadir nueva",
   "searchSort": "Ordenar",
@@ -161,7 +165,7 @@
   "searchON": "Antiguo {} Nuevo",
   "searchNO": "Nuevo {} Antiguo",
   "searchShiftClickOr": "mayús-clic o",
-  "searchAdvTitle": "Alternar búsqueda básica/avanzada",
+  "searchAdvTitle": "Mostrar búsqueda avanzada",
   "searchSearchIn": "Buscar en",
   "searchOther": "Otros campos",
   "searchProtect": "Campos seguros",
@@ -186,7 +190,7 @@
   "openNothingFound": "No se encontró nada",
   "openNothingFoundBody": "No se han encontrado archivos compatibles.",
   "openSelectFile": "Selecciona un archivo",
-  "openSelectFileBody": "Selecciona el archivo a abrir",
+  "openSelectFileBody": "Selecciona el archivo que quieres abrir",
   "openPassFor": "Contraseña para",
   "openRemoveLastQuestion": "¿Eliminar archivo local?",
   "openRemoveLastQuestionBody": "El archivo que deseas eliminar sólo se encuentra almacenado dentro de la aplicación. ¿Deseas eliminarlo definitivamente?",
@@ -267,7 +271,8 @@
   "detCopyHint": "Puedes copiar el valor del campo haciendo clic sobre su título",
   "detMore": "más",
   "detClickToAddField": "haz clic para añadir un nuevo campo",
-  "detMenuAddNewField": "Añadir nuevo campo",
+  "detMenuAddNewField": "Añadir un nuevo campo",
+  "detMenuAddNewWebsite": "Añadir otro sitio web",
   "detMenuShowEmpty": "Mostrar campos vacíos",
   "detMenuHideEmpty": "Ocultar campos vacíos",
   "detMenuAddField": "Añadir {}",
@@ -341,6 +346,7 @@
   "autoTypeSelectionHintOpt": "Introduce solo el usuario",
   "autoTypeSelectionHintShift": "Otros campos",
   "autoTypeSelectionOtp": "Código de un solo uso",
+  "autoTypeUnlockMessage": "Desbloquear para autocompletado",
   "appSecWarn": "¡No es seguro!",
   "appSecWarnBody1": "Has cargado esta aplicación mediante una conexión insegura. Alguien podría estar observando tu tráfico y robando tus contraseñas. Te aconsejamos no continuar, a no ser que comprendas perfectamente lo que estás haciendo.",
   "appSecWarnBody2": "Sí, tu base de datos está cifrada, pero nadie te puede garantizar que la aplicación no haya sido modificada antes de llegar a ti.",
@@ -475,7 +481,7 @@
   "setGenAuditPasswordEntropy": "Comprobar longitud y aleatoriedad de las contraseñas",
   "setGenExcludePinsFromAudit": "Nunca comprobar códigos PIN numéricos, como 123456",
   "setGenCheckPasswordsOnHIBP": "Comprobar contraseñas usando el servicio en línea {}",
-  "setGenHelpHIBP": "KeeWeb puede comprobar si tus contraseñas han sido previamente expuestas en una filtración de datos usando un servicio en línea. Tu contraseña no se podrá recuperar de la información mandada a través de la red, aunque sí podría verse expuesto el número de contraseñas comprobadas de esta forma. Puedes encontrar más información acerca de la privacidad de tus datos usando este servicio {}. Si está opción está activada, KeeWeb comprobará automáticamente tus contraseñas en este apartado.",
+  "setGenHelpHIBP": "KeeWeb puede comprobar si tus contraseñas han sido previamente expuestas en una filtración de datos usando un servicio en línea. Tu contraseña no se podrá recuperar a partir la información mandada a través de la red, sin embargo, el número de contraseñas comprobadas de esta forma sí que podría verse expuesto. Puedes encontrar más información acerca de la privacidad de tus datos usando este servicio {}. Si está opción está activada, KeeWeb comprobará automáticamente tus contraseñas en este apartado.",
   "setGenHelpHIBPLink": "aquí",
   "setGenAuditPasswordAge": "Contraseñas antiguas",
   "setGenAuditPasswordAgeOff": "No mostrar advertencias sobre contraseñas antiguas",
@@ -615,6 +621,38 @@
   "setPlTranslateLink": "traducir la aplicación a tu idioma",
   "setPlAutoUpdate": "Actualizar automáticamente",
   "setPlLoadGallery": "Cargar galería de complementos",
+  "setBrowserTitle": "Navegador",
+  "setBrowserIntroDesktop": "KeeWeb puede introducir contraseñas usando el autocompletado, sin embargo, una extensión del navegador puede ser una forma más conveniente de hacerlo. KeeWeb admite dos extensiones de navegador:",
+  "setBrowserIntroKeeWebConnect": "la extensión oficial de KeeWeb, está hecha con características de KeeWeb en mente, pero podrías perderte algunas de las capacidades avanzadas que se pueden encontrar en la otra extensión.",
+  "setBrowserIntroKeePassXcBrowser": "esta extensión fue desarrollada para KeePassXC, ha estado en el mercado por un tiempo y es bastante sólida. Esta extensión no es parte de KeeWeb y podría haber problemas de compatibilidad.",
+  "setBrowserIntroWeb": "Instala nuestra extensión de navegador para autocompletar contraseñas en diferentes páginas web. Esta extensión para el navegador se conectará a una pestaña de KeeWeb en tu navegador para obtener las contraseñas. Haz clic aquí para descargar la extensión:",
+  "setBrowserNotEnabled": "La integración con el navegador no está activada, las extensiones no podrán conectarse a KeeWeb. Usa las casillas de verificación inferiores para activarla:",
+  "setBrowserEnablePerBrowser": "Activar la integración con el navegador utilizando las casillas de verificación inferiores:",
+  "setBrowserFocusIfLocked": "Abrir KeeWeb si una extensión del navegador intenta conectarse mientras no hay un archivo abierto",
+  "setBrowserFocusIfEmpty": "Mostrar la pantalla de selección de entrada si no se encuentra coincidiencia por URL",
+  "setBrowserOtherBrowsers": "Otros navegadores",
+  "setBrowserExtensionFor": "para {}",
+  "setBrowserExtensionNotSupported": "No soportado",
+  "setBrowserExtensionHelp": "¿Cómo instalar?",
+  "setBrowserExtensionInstall": "Instalar la extensión",
+  "setBrowserExtensionKPXCWarnHeader": "{} dejará de funcionar",
+  "setBrowserExtensionKPXCWarnBody1": "Desafortunadamente no es posible conectar una extensión a varias aplicaciones. Si conectas la extensión a KeeWeb, intentaremos sobreescribir la asociación de aplicación, lo cual significa que la integración con {} dejará de funcionar. Incluso si desmarcas esta casilla de verificación, no se restaurará la asociación con {}. Para hacer que vuelva a funcionar, configura la integración con el navegador en los ajustes de {}.",
+  "setBrowserExtensionKPXCWarnBody2": "¿Configurar la extensión para usar KeeWeb?",
+  "setBrowserSessions": "Sesiones",
+  "setBrowserSessionsEmpty": "No hay sesiones conectadas.",
+  "setBrowserSessionsIntro": "Estas extensiones están conectadas con KeeWeb.",
+  "setBrowserSessionsActiveTooltip": "Sesión activa",
+  "setBrowserSessionsActiveText": "Está sesión está activada. Puede intercambiar información con KeeWeb basándose en los siguientes permisos:",
+  "setBrowserSessionsInactiveTooltip": "Sesión inactiva",
+  "setBrowserSessionsInactiveText": "Esta sesion está desactivada. Esta extensión está conectada a KeeWeb, sin embargo, no ha intentado intercambiar información. Cuando la extensión haga una solicitud, podrás escoger qué quieres compartir.",
+  "setBrowserSessionsDeniedTooltip": "Acceso denegado",
+  "setBrowserSessionsDeniedText": "Está sesión está desactivada. Esta extensión está conectada a KeeWeb, sin embargo, has denegado el acceso a la información.",
+  "setBrowserSessionsConnectedDate": "Conectado",
+  "setBrowserSessionsTerminate": "Terminar esta sesión",
+  "setBrowserSessionsAccessToFiles": "Permitir acceso a archivos",
+  "setBrowserSessionsNoFileAccess": "Esta extensión no tiene acceso a ningún archivo, no podrá obtener contraseñas de KeeWeb.",
+  "setBrowserSessionsPasswordsRead": "Contraseñas leídas",
+  "setBrowserSessionsPasswordsWritten": "Contraseñas guardadas",
   "setDevicesTitle": "Dispositivos",
   "setDevicesEnableUsb": "Habilitar interacción con dispositivos USB",
   "setDevicesYubiKeyIntro": "Se recomienda leer {} antes de usar una YubiKey.",
@@ -670,6 +708,8 @@
   "dropboxLinkFull": "Todo Dropbox o cualquier carpeta",
   "dropboxLinkCustom": "Aplicación Dropbox propia",
   "gdriveSharedWithMe": "Compartido conmigo",
+  "gdriveSharedDrives": "Unidades compartidas",
+  "gdriveTeamDrives": "Unidades de equipo",
   "webdavSaveMethod": "Modo de guardado",
   "webdavSaveMove": "Subir un archivo temporal y mover",
   "webdavSavePut": "Sobreescribir el archivo kdbx con PUT",
@@ -698,5 +738,39 @@
   "yubiKeyDisabledErrorHeader": "USB desactivado",
   "yubiKeyDisabledErrorBody": "Se requiere una YubiKey para abrir este archivo, por favor, activa los dispositivos USB en las opciones.",
   "yubiKeyErrorWithCode": "Error de YubiKey, código {}.",
-  "bioOpenAuthPrompt": "abrir \"{}\""
+  "bioOpenAuthPrompt": "abrir \"{}\"",
+  "extensionErrorNoOpenFiles": "No hay archivos abiertos",
+  "extensionErrorUserRejected": "La solicitud fue denegada",
+  "extensionErrorNoMatches": "No hay inicios de sesión coincidentes",
+  "extensionErrorAlertDisplayed": "No se puede hacer una pregunta ahora porque hay otra ventana de diálogo abierta, por favor, inténtalo de nuevo",
+  "extensionConnectHeader": "Intercambio de información de extensión",
+  "extensionConnectIntro": "Una extensión de navegador que se identifica como {} intenta intercambiar información con KeeWeb.",
+  "extensionConnectUnknownActivity": "KeeWeb no puede verificar que la aplicación conectada sea lo que se supone que es. Aprueba la solicitud solo si reconoces esta actividad.",
+  "extensionConnectFiles": "En esta sesión, dar acceso a:",
+  "extensionConnectAllOtherFiles": "El resto de archivos",
+  "extensionConnectAllFiles": "Todos los archivos",
+  "extensionConnectAskGet": "Preguntar antes de devolver contraseñas a la extensión:",
+  "extensionConnectAskGetMultiple": "Si hay más de una coincidencia",
+  "extensionConnectAskGetAlways": "siempre",
+  "extensionConnectAskSave": "Preguntar antes de guardar nuevas contraseñas a KeeWeb:",
+  "extensionConnectAskSaveAlways": "siempre",
+  "extensionConnectAskSaveAuto": "cuando no sea posible guardar automáticamente",
+  "extensionConnectSettingsAreForSession": "Las opciones que escojas aquí son válidas solo para la sesión activa. Puedes ver y administrar sesiones en los ajustes de KeeWeb.",
+  "extensionUnlockMessage": "Desbloquear para conectar una extensión de navegador",
+  "extensionNewGroupHeader": "Nuevo grupo",
+  "extensionNewGroupBody": "{} está intentando crear un nuevo grupo. ¿Permitir?",
+  "extensionNewGroupPath": "Ruta de grupo",
+  "extensionNewGroupFile": "Este grupo se creará en:",
+  "extensionSaveEntryHeader": "Guardar contraseña",
+  "extensionSaveEntryBody": "{} está intentando guardar una contraseña. ¿Permitir?",
+  "extensionSaveEntryAuto": "Guardar otras contraseñas automáticamente en esta sesión",
+  "extensionSaveEntryNewGroup": "nuevo grupo",
+  "extensionSelectPasswordFor": "Seleccionar una contraseña para {}",
+  "selectEntryHeader": "Seleccionar entrada",
+  "selectEntryEnterHint": "usar la entrada resaltada",
+  "selectEntryTypingHint": "Empieza a escribir para filtrar",
+  "selectEntryContains": "Contiene texto",
+  "selectEntrySubdomains": "Subdominios",
+  "selectEntryFieldHeader": "Seleccionar campo",
+  "selectEntryFieldTouch": "Presiona el botón en tu dispositivo para generar un código de uso único."
 }
