--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -47,6 +47,7 @@
   "menuColors": "色",
   "menuTrash": "ごみ箱",
   "menuSetGeneral": "一般",
+  "menuSetBrowser": "ブラウザ",
   "menuSetAbout": "概要",
   "menuSetDevices": "デバイス",
   "menuAlertNoTags": "タグ無し",
@@ -81,6 +82,8 @@
   "alertCopy": "コピー",
   "alertClose": "閉じる",
   "alertDoNotAsk": "もう尋ねないでください",
+  "alertAllow": "許可",
+  "alertDeny": "拒否",
   "appBeta": "警告：　ベータ版です。試用にのみお使いください",
   "footerOpen": "開く / 新規",
   "footerSyncError": "同期エラー",
@@ -140,6 +143,7 @@
   "keyChangeMessageExpired": "このデータベースのマスターキーは期限が切れました。新しいキーを入力してください",
   "keyChangeRepeatPassword": "もう一度パスワードを入力してください",
   "keyEnter": "エンター",
+  "keyEsc": "Esc",
   "iconFavTitle": "webサイトのファビコンをダウンロードして使用する",
   "iconSelCustom": "カスタムアイコンを選択",
   "listEmptyTitle": "空",
@@ -268,6 +272,7 @@
   "detMore": "その他...",
   "detClickToAddField": "クリックして新しいフィールドを追加する",
   "detMenuAddNewField": "新しいフィールドを追加する",
+  "detMenuAddNewWebsite": "別のサイトを追加",
   "detMenuShowEmpty": "空のフィールドを表示する",
   "detMenuHideEmpty": "空のフィールドを非表示にする",
   "detMenuAddField": "{}を追加する",
@@ -341,6 +346,7 @@
   "autoTypeSelectionHintOpt": "ユーザーのみ入力",
   "autoTypeSelectionHintShift": "その他のフィールド",
   "autoTypeSelectionOtp": "ワンタイムパスワード",
+  "autoTypeUnlockMessage": "自動入力の解除",
   "appSecWarn": "安全ではありません!",
   "appSecWarnBody1": "安全でない接続でアプリをロードしました。誰かが監視してパスワードを盗むかもしれません。あなたが何をしているのかを明確に理解しているのでなければ、操作を中止することを強く推奨します。",
   "appSecWarnBody2": "あなたのデータベースは暗号化されています。しかし、あなたのアプリが変更されていないことを誰も保証することはできません。",
@@ -615,6 +621,38 @@
   "setPlTranslateLink": "あなたの利用する言語向けにアプリを翻訳",
   "setPlAutoUpdate": "自動で更新する",
   "setPlLoadGallery": "プラグインギャラリーをロード",
+  "setBrowserTitle": "ブラウザ",
+  "setBrowserIntroDesktop": "KeeWebはパスワードの自動入力ができます、しかしながら、拡張機能を利用することでより便利にできるかもしれない。KeeWebでは２つの拡張機能をサポートしています:",
+  "setBrowserIntroKeeWebConnect": "KeeWeb公式の拡張機能、KeeWebの機能に考慮して作成されているが、他の拡張機能にあるような高度な機能よりも漏れがあるかもしれません。",
+  "setBrowserIntroKeePassXcBrowser": "もう一つは、KeePassXCのために作成された拡張機能、作成されてからしばらく立っているため堅牢です。この拡張機能はKeeWebの一部ではないため互換性に問題があります。",
+  "setBrowserIntroWeb": "パスワード自動入力の拡張機能インストールにはこのKeeWebサイトと別のページへ移動します。拡張機能はKeeWebに接続してパスワードを取得します。拡張機能をダウンロードするにはこちらをクリックしてください:",
+  "setBrowserNotEnabled": "ブラウザ統合が有効ではありません、拡張機能がKeeWebに接続できません。使用するにはこちらのチェックボックスを有効にしてください:",
+  "setBrowserEnablePerBrowser": "使用するにはこちらのチェックボックスを有効にしてください:",
+  "setBrowserFocusIfLocked": "ファイルを開いていない状態で拡張機能が接続するしようとした場合KeeWebを開く",
+  "setBrowserFocusIfEmpty": "URLでも発見できない場合エントリーの選択画面を表示",
+  "setBrowserOtherBrowsers": "その他のブラウザ",
+  "setBrowserExtensionFor": "{} のために",
+  "setBrowserExtensionNotSupported": "サポート外",
+  "setBrowserExtensionHelp": "インストールするには？",
+  "setBrowserExtensionInstall": "拡張機能のインストール",
+  "setBrowserExtensionKPXCWarnHeader": "{}は動作しません",
+  "setBrowserExtensionKPXCWarnBody1": "残念なことに、いくつかのアプリでは拡張機能に接続することに積極的ではありません。拡張機能をKeeWebに接続すると、アプリの関連付けを上書きするので、{}は動作しなくなります。それでも、チェックボックスを外さない場合、{}の関連付けを戻しません。再度動作させるには、{}のブラウザ統合の設定を行ってください",
+  "setBrowserExtensionKPXCWarnBody2": "拡張機能でKeeWebを使用する設定にしますか？",
+  "setBrowserSessions": "セッション",
+  "setBrowserSessionsEmpty": "セッションは接続されていません",
+  "setBrowserSessionsIntro": "これらの拡張機能は現在KeeWebと接続されています",
+  "setBrowserSessionsActiveTooltip": "有効なセッション",
+  "setBrowserSessionsActiveText": "このセッションは有効です。次の権限でKeeWebとデータをやり取りができます:",
+  "setBrowserSessionsInactiveTooltip": "有効でないセッション",
+  "setBrowserSessionsInactiveText": "このセッションは有効ではありません。拡張機能はKeeWebと接続していますが、データのやり取りをすることができません。拡張機能が何かを要求しきたとき、共有するものを選択することができます。",
+  "setBrowserSessionsDeniedTooltip": "アクセス拒否",
+  "setBrowserSessionsDeniedText": "このセッションは有効ではありません。拡張機能はKeeWebに接続していますが、データへのアクセスを拒否しています。",
+  "setBrowserSessionsConnectedDate": "接続済み",
+  "setBrowserSessionsTerminate": "このセッションを終了させる",
+  "setBrowserSessionsAccessToFiles": "ファイルへのアクセスを許可",
+  "setBrowserSessionsNoFileAccess": "拡張機能が必要なファイルへアクセスできず、KeeWebがパスワードを取得することができません。",
+  "setBrowserSessionsPasswordsRead": "パスワード読み取り",
+  "setBrowserSessionsPasswordsWritten": "パスワード保存",
   "setDevicesTitle": "デバイス",
   "setDevicesEnableUsb": "USBデバイスとの接続を有効にする",
   "setDevicesYubiKeyIntro": "YubiKeyを使用する前に{}を読むことを推奨します。",
@@ -670,6 +708,8 @@
   "dropboxLinkFull": "Dropbox内の任意のフォルダ",
   "dropboxLinkCustom": "自身のDropboxアプリ",
   "gdriveSharedWithMe": "共有アイテム",
+  "gdriveSharedDrives": "ドライブ共有",
+  "gdriveTeamDrives": "チームドライブ",
   "webdavSaveMethod": "保存方式",
   "webdavSaveMove": "一時ファイルをアップロードして移動する",
   "webdavSavePut": "kdbxファイルをPUTで上書きします",
@@ -698,5 +738,39 @@
   "yubiKeyDisabledErrorHeader": "USBが無効です",
   "yubiKeyDisabledErrorBody": "このファイルを開くにはYubiKeyが必要です。設定からUSBデバイスを有効化してください。",
   "yubiKeyErrorWithCode": "YubiKeyエラー、コード{}",
-  "bioOpenAuthPrompt": "\"{}\" を開く"
+  "bioOpenAuthPrompt": "\"{}\" を開く",
+  "extensionErrorNoOpenFiles": "ファイルを開いていません",
+  "extensionErrorUserRejected": "要求は拒否されました",
+  "extensionErrorNoMatches": "ログインはマッチしませんでした",
+  "extensionErrorAlertDisplayed": "他でダイアログボックスを表示されているため処理ができません、再度試してください",
+  "extensionConnectHeader": "拡張機能とデータをやり取り",
+  "extensionConnectIntro": "{}という拡張機能がKeeWebとデータのやり取りを試みています",
+  "extensionConnectUnknownActivity": "KeeWebは接続したアプリケーションが実際どうであるか確認はできません。この動作を理解しているときだけ要求を承認してください。",
+  "extensionConnectFiles": "このセッションで許可されるものは:",
+  "extensionConnectAllOtherFiles": "その他すべてのファイル",
+  "extensionConnectAllFiles": "すべてのファイル",
+  "extensionConnectAskGet": "拡張機能へパスワードを渡す前に確認:",
+  "extensionConnectAskGetMultiple": "複数の一致がある場合",
+  "extensionConnectAskGetAlways": "常に許可",
+  "extensionConnectAskSave": "KeeWebにパスワードを保存する前に確認:",
+  "extensionConnectAskSaveAlways": "常に許可",
+  "extensionConnectAskSaveAuto": "自動的に保存できない場合",
+  "extensionConnectSettingsAreForSession": "アクティブなセッションでのみこの選択は有効です。セッションの表示や管理はKeeWebの設定からできます。",
+  "extensionUnlockMessage": "拡張機能への接続を解除",
+  "extensionNewGroupHeader": "新規グループ",
+  "extensionNewGroupBody": "{}が新しいグループを作成していいですか？",
+  "extensionNewGroupPath": "グループのパス",
+  "extensionNewGroupFile": "このグループは以下の場所に作成されます",
+  "extensionSaveEntryHeader": "パスワードを保存",
+  "extensionSaveEntryBody": "{}でパスワードを保存していいですか？",
+  "extensionSaveEntryAuto": "このセッションでその他のパスワードも自動的に保存",
+  "extensionSaveEntryNewGroup": "新規グループ",
+  "extensionSelectPasswordFor": "{}に選択するパスワード",
+  "selectEntryHeader": "エントリーの選択",
+  "selectEntryEnterHint": "エントリーを強調",
+  "selectEntryTypingHint": "入力してフィルタ",
+  "selectEntryContains": "含まれた文字",
+  "selectEntrySubdomains": "サブドメイン",
+  "selectEntryFieldHeader": "フィールド選択",
+  "selectEntryFieldTouch": "デバイスのボタンを押してワンタイムパスワードを生成します"
 }
