--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -47,6 +47,7 @@
   "menuColors": "Kleuren",
   "menuTrash": "Prullenbak",
   "menuSetGeneral": "Algemeen",
+  "menuSetBrowser": "Webbrowser",
   "menuSetAbout": "Over",
   "menuSetDevices": "Apparaten",
   "menuAlertNoTags": "Geen labels",
@@ -81,6 +82,8 @@
   "alertCopy": "Kopiëren",
   "alertClose": "Sluiten",
   "alertDoNotAsk": "Niet meer vragen",
+  "alertAllow": "Toestaan",
+  "alertDeny": "Afwijzen",
   "appBeta": "WAARSCHUWING: bèta-versie, alleen voor testdoeleinden",
   "footerOpen": "Openen / Nieuw",
   "footerSyncError": "Synchonisatiefout",
@@ -140,6 +143,7 @@
   "keyChangeMessageExpired": "De hoofdsleutel voor deze database is verlopen. Voer een nieuwe sleutel in.",
   "keyChangeRepeatPassword": "Wachtwoord, nogmaals",
   "keyEnter": "Enter",
+  "keyEsc": "Esc",
   "iconFavTitle": "Website favicon downloaden en gebruiken",
   "iconSelCustom": "Selecteer een eigen pictogram",
   "listEmptyTitle": "Leeg",
@@ -268,6 +272,7 @@
   "detMore": "meer",
   "detClickToAddField": "klik om een nieuw veld toe te voegen",
   "detMenuAddNewField": "Nieuw veld toevoegen",
+  "detMenuAddNewWebsite": "Nog een website toevoegen",
   "detMenuShowEmpty": "Lege velden weergeven",
   "detMenuHideEmpty": "Lege velden verbergen",
   "detMenuAddField": "{} Toevoegen",
@@ -341,6 +346,7 @@
   "autoTypeSelectionHintOpt": "Voer alleen gebruikersnaam in",
   "autoTypeSelectionHintShift": "Overige velden",
   "autoTypeSelectionOtp": "Eenmalige code",
+  "autoTypeUnlockMessage": "Ontgrendelen voor Auto-type",
   "appSecWarn": "Onveilig!",
   "appSecWarnBody1": "Je hebt de app geladen met een onveilige verbinding. Iemand kan mogelijk nu meekijken en je wachtwoorden stelen. Wij adviseren je te stoppen tenzij je je bewust bent van de mogelijke consequenties.",
   "appSecWarnBody2": "Ja, je database is versleuteld, maar dit is geen garantie dat de app niet gewijzigd is onderweg naar jou toe.",
@@ -615,6 +621,38 @@
   "setPlTranslateLink": "de app vertalen naar jouw taal",
   "setPlAutoUpdate": "Automatisch vernieuwen",
   "setPlLoadGallery": "Plug-in lijst laden",
+  "setBrowserTitle": "Webbrowser",
+  "setBrowserIntroDesktop": "KeeWeb kan wachtwoorden invoeren met auto-type, maar een browserextensie kan een handiger manier zijn om dit te doen. KeeWeb ondersteunt twee browserextensies:",
+  "setBrowserIntroKeeWebConnect": "de officiële KeeWeb-extensie die is gebouwd met de functies van KeeWeb in gedachten, maar het kan zijn dat je enkele geavanceerde mogelijkheden mist die je in de andere extensie kunt vinden.",
+  "setBrowserIntroKeePassXcBrowser": "deze extensie is ontwikkeld voor KeePassXC, is al een tijdje op de markt en behoorlijk solide. De extensie maakt geen deel uit van KeeWeb en er kunnen compatibiliteitsproblemen zijn.",
+  "setBrowserIntroWeb": "Installeer onze browserextensie om automatisch wachtwoorden van KeeWeb op verschillende pagina's in te vullen. De browserextensie maakt verbinding met een KeeWeb-tabblad in uw browser om wachtwoorden op te halen. Klik hier om de extensie te downloaden:",
+  "setBrowserNotEnabled": "Browserintegratie is niet ingeschakeld waardoor extensies geen verbinding kunnen maken met KeeWeb. Selecteer de onderstaande opties om het in te schakelen:",
+  "setBrowserEnablePerBrowser": "Schakel browserintegratie in met behulp van de onderstaande opties:",
+  "setBrowserFocusIfLocked": "Open KeeWeb als een browserextensie probeert verbinding te maken terwijl er geen open bestand is",
+  "setBrowserFocusIfEmpty": "Geef het invoerselectiescherm weer als er geen overeenkomst is gevonden met de URL",
+  "setBrowserOtherBrowsers": "Andere webbrowsers",
+  "setBrowserExtensionFor": "voor {}",
+  "setBrowserExtensionNotSupported": "Niet ondersteund",
+  "setBrowserExtensionHelp": "Hoe installeren?",
+  "setBrowserExtensionInstall": "Installeer de extensie",
+  "setBrowserExtensionKPXCWarnHeader": "{} zal stoppen met werken",
+  "setBrowserExtensionKPXCWarnBody1": "Helaas is het niet mogelijk om één extensie aan meerdere apps te koppelen. Als je de extensie met KeeWeb verbindt, overschrijven we de app-koppeling, wat betekent dat de integratie met {} niet meer werkt. Zelfs als u dit selectievakje uitschakelt, wordt de koppeling met {} niet hersteld. Configureer de browserintegratie in de {} instellingen om dit weer te laten werken, .",
+  "setBrowserExtensionKPXCWarnBody2": "Extensie configureren om KeeWeb te gebruiken?",
+  "setBrowserSessions": "Sessies",
+  "setBrowserSessionsEmpty": "Geen verbonden sessies.",
+  "setBrowserSessionsIntro": "Deze extensies zijn verbonden met KeeWeb.",
+  "setBrowserSessionsActiveTooltip": "Actieve sessie",
+  "setBrowserSessionsActiveText": "Deze sessie is actief. Het kan gegevens uitwisselen met KeeWeb op basis van de volgende machtigingen:",
+  "setBrowserSessionsInactiveTooltip": "Niet-actieve sessie",
+  "setBrowserSessionsInactiveText": "Deze sessie is inactief. De extensie is verbonden met KeeWeb, maar heeft niet geprobeerd gegevens uit te wisselen. Als de extensie iets vraagt, kun je selecteren wat je wilt delen.",
+  "setBrowserSessionsDeniedTooltip": "Toegang geweigerd",
+  "setBrowserSessionsDeniedText": "Deze sessie is inactief. De extensie is verbonden met KeeWeb, maar is de toegang tot gegevens geweigerd.",
+  "setBrowserSessionsConnectedDate": "Verbonden",
+  "setBrowserSessionsTerminate": "Deze sessie beëindigen",
+  "setBrowserSessionsAccessToFiles": "Toegang verlenen tot bestanden",
+  "setBrowserSessionsNoFileAccess": "De extensie heeft geen toegang tot bestanden en kan geen wachtwoorden ophalen van KeeWeb.",
+  "setBrowserSessionsPasswordsRead": "Gelezen wachtwoorden",
+  "setBrowserSessionsPasswordsWritten": "Opgeslagen wachtwoorden",
   "setDevicesTitle": "Apparaten",
   "setDevicesEnableUsb": "Interactie met USB-apparaten mogelijk maken",
   "setDevicesYubiKeyIntro": "Het is raadzaam om {} te lezen voordat je een YubiKey gebruikt.",
@@ -670,6 +708,8 @@
   "dropboxLinkFull": "Volledige Dropbox of een folder",
   "dropboxLinkCustom": "Eigen Dropbox-app",
   "gdriveSharedWithMe": "Gedeeld met mij",
+  "gdriveSharedDrives": "Gedeelde schijven",
+  "gdriveTeamDrives": "Teamschijven",
   "webdavSaveMethod": "Opslagmethode",
   "webdavSaveMove": "Sla een tijdelijk bestand op en verplaats",
   "webdavSavePut": "Het kdbx-bestand met PUT overschrijven",
@@ -698,5 +738,39 @@
   "yubiKeyDisabledErrorHeader": "USB is uitgeschakeld",
   "yubiKeyDisabledErrorBody": "YubiKey is vereist om dit bestand te openen, schakel in instellingen USB-apparaten in.",
   "yubiKeyErrorWithCode": "Fout met YubiKey, code {}",
-  "bioOpenAuthPrompt": "{} te openen"
+  "bioOpenAuthPrompt": "{} te openen",
+  "extensionErrorNoOpenFiles": "Geen open bestanden",
+  "extensionErrorUserRejected": "Het verzoek is afgewezen",
+  "extensionErrorNoMatches": "Geen overeenkomende aanmeldingen",
+  "extensionErrorAlertDisplayed": "Kan nu geen vraag stellen omdat er een ander dialoogvenster wordt weergegeven, probeer het opnieuw",
+  "extensionConnectHeader": "Gegevensuitwisseling van extensie",
+  "extensionConnectIntro": "Een browserextensie die zichzelf identificeert als {}, probeert gegevens uit te wisselen met KeeWeb.",
+  "extensionConnectUnknownActivity": "KeeWeb verifieert niet dat de verbonden applicatie is wat deze beweert te zijn. Keur de aanvraag alleen goed als je deze activiteit herkent.",
+  "extensionConnectFiles": "Sta in deze sessie toegang toe tot:",
+  "extensionConnectAllOtherFiles": "Alle andere bestanden",
+  "extensionConnectAllFiles": "Alle bestanden",
+  "extensionConnectAskGet": "Vraag voor doorgave van wachtwoorden aan deze extensie:",
+  "extensionConnectAskGetMultiple": "bij meer dan een overeenkomst",
+  "extensionConnectAskGetAlways": "altijd",
+  "extensionConnectAskSave": "Vraag voor het opslaan van nieuwe wachtwoorden naar KeeWeb:",
+  "extensionConnectAskSaveAlways": "altijd",
+  "extensionConnectAskSaveAuto": "wanneer automatisch opslaan niet mogelijk is",
+  "extensionConnectSettingsAreForSession": "De instellingen die je hier selecteert, zijn alleen geldig voor de actieve sessie. Je kunt sessies bekijken en beheren in de instellingen van KeeWeb.",
+  "extensionUnlockMessage": "Ontgrendelen om een browserextensie te verbinden",
+  "extensionNewGroupHeader": "Nieuwe groep",
+  "extensionNewGroupBody": "{} probeert een nieuwe groep aan te maken. Toestaan?",
+  "extensionNewGroupPath": "Groepspad",
+  "extensionNewGroupFile": "Deze groep wordt aangemaakt in:",
+  "extensionSaveEntryHeader": "Wachtwoord opslaan",
+  "extensionSaveEntryBody": "{} probeert een wachtwoord op te slaan. Toestaan?",
+  "extensionSaveEntryAuto": "Andere wachtwoorden automatisch opslaan in deze sessie",
+  "extensionSaveEntryNewGroup": "nieuwe groep",
+  "extensionSelectPasswordFor": "Kies een wachtwoord voor {}",
+  "selectEntryHeader": "Item kiezen",
+  "selectEntryEnterHint": "gebruik het geselecteerde item",
+  "selectEntryTypingHint": "Begin met typen om te filteren",
+  "selectEntryContains": "Bevat tekst",
+  "selectEntrySubdomains": "Subdomeinen",
+  "selectEntryFieldHeader": "Veld selecteren",
+  "selectEntryFieldTouch": "Druk op de knop op je apparaat om een eenmalige code te genereren."
 }
