--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -47,6 +47,7 @@
   "menuColors": "Kolory",
   "menuTrash": "Kosz",
   "menuSetGeneral": "Ogólne",
+  "menuSetBrowser": "Przeglądarka",
   "menuSetAbout": "Informacje",
   "menuSetDevices": "Urządzenia",
   "menuAlertNoTags": "Brak znaczników",
@@ -81,6 +82,8 @@
   "alertCopy": "Skopiuj",
   "alertClose": "Zamknij",
   "alertDoNotAsk": "Nie pytaj mnie więcej",
+  "alertAllow": "Zezwól",
+  "alertDeny": "Odmów",
   "appBeta": "UWAGA: wersja beta tylko do wstępnego podglądu",
   "footerOpen": "Otwórz / Nowy",
   "footerSyncError": "Błąd synchronizacji",
@@ -140,6 +143,7 @@
   "keyChangeMessageExpired": "Klucz główny tej bazy danych wygasł. Proszę wprowadzić nowy klucz",
   "keyChangeRepeatPassword": "Powtórz hasło",
   "keyEnter": "Wprowadź",
+  "keyEsc": "Esc",
   "iconFavTitle": "Pobierz i użyj ikony ulubionych strony WWW",
   "iconSelCustom": "Wybierz niestandardową ikonę",
   "listEmptyTitle": "Pusto",
@@ -268,6 +272,7 @@
   "detMore": "Więcej",
   "detClickToAddField": "Kliknij, aby dodać nowe pole",
   "detMenuAddNewField": "Dodaj nowe pole",
+  "detMenuAddNewWebsite": "Dodaj inną witrynę",
   "detMenuShowEmpty": "Pokaż puste pola",
   "detMenuHideEmpty": "Ukryj puste pola",
   "detMenuAddField": "Dodaj {}",
@@ -341,6 +346,7 @@
   "autoTypeSelectionHintOpt": "Wpisz tylko nazwę użytkownika",
   "autoTypeSelectionHintShift": "Inne pola",
   "autoTypeSelectionOtp": "Kod jednorazowy",
+  "autoTypeUnlockMessage": "Odblokuj do automatycznego wpisywania",
   "appSecWarn": "Niezabezpieczone!",
   "appSecWarnBody1": "Aplikację załadowano z niezabezpieczonym połączeniem. Ktoś może cię obserwować i ukraść twoje hasła. Zdecydowanie zalecamy przerwanie pracy, chyba że wyraźnie zrozumiesz, co robisz.",
   "appSecWarnBody2": "Tak, twoja baza danych jest zaszyfrowana, ale nikt nie może zagwarantować, że aplikacja nie została zmodyfikowana w drodze do ciebie.",
@@ -615,6 +621,38 @@
   "setPlTranslateLink": "przetłumaczyć tę aplikację na swój język",
   "setPlAutoUpdate": "Aktualizuj automatycznie",
   "setPlLoadGallery": "Wczytaj galerię wtyczek",
+  "setBrowserTitle": "Przeglądarka",
+  "setBrowserIntroDesktop": "KeeWeb może wprowadzać hasła przy użyciu automatycznego wpisywania, jednak rozszerzenie przeglądarki może być wygodniejszym sposobem robienia tego. KeeWeb obsługuje dwa rozszerzenia przeglądarki:",
+  "setBrowserIntroKeeWebConnect": "oficjalne rozszerzenie KeeWeb, zostało zbudowane z myślą o funkcjach KeeWeb, ale może nie mieć niektórych zaawansowanych możliwości, które mogą być w drugim rozszerzeniu.",
+  "setBrowserIntroKeePassXcBrowser": "to rozszerzenie zostało opracowane dla KeePassXC, dostępne na rynku od jakiegoś czasu i jest całkiem solidne. Rozszerzenie nie jest częścią KeeWeb i mogą wystąpić problemy ze zgodnością.",
+  "setBrowserIntroWeb": "Zainstaluj nasze rozszerzenie przeglądarki, aby automatycznie uzupełniać hasła z KeeWeb na różnych stronach. Rozszerzenie przeglądarki połączy się z kartą KeeWeb w przeglądarce, aby pobrać hasła. Kliknij tutaj, aby pobrać rozszerzenie:",
+  "setBrowserNotEnabled": "Integracja przeglądarki nie jest włączona, rozszerzenia nie będą mogły łączyć się z KeeWeb. Użyj poniższych pól wyboru, aby ją włączyć:",
+  "setBrowserEnablePerBrowser": "Włącz integrację przeglądarki za pomocą poniższych pól wyboru:",
+  "setBrowserFocusIfLocked": "Otwórz KeeWeb, jeśli rozszerzenie przeglądarki próbuje się połączyć, gdy nie ma otwartego pliku",
+  "setBrowserFocusIfEmpty": "Pokaż ekran wyboru wpisu, jeśli nie znaleziono dopasowania według adresu URL",
+  "setBrowserOtherBrowsers": "Inne przeglądarki",
+  "setBrowserExtensionFor": "dla {}",
+  "setBrowserExtensionNotSupported": "Nieobsługiwane",
+  "setBrowserExtensionHelp": "Jak zainstalować?",
+  "setBrowserExtensionInstall": "Zainstaluj rozszerzenie",
+  "setBrowserExtensionKPXCWarnHeader": "{} przestanie działać",
+  "setBrowserExtensionKPXCWarnBody1": "Niestety nie można połączyć jednego rozszerzenia z kilkoma aplikacjami. Jeśli połączysz rozszerzenie z KeeWeb, nadpiszemy skojarzenie z aplikacją, co oznacza, że integracja z {} przestanie działać. Nawet jeśli odznaczysz to pole wyboru, skojarzenie z {} nie zostanie przywrócone. Aby znów działało, skonfiguruj integrację przeglądarki w ustawieniach {}.",
+  "setBrowserExtensionKPXCWarnBody2": "Skonfigurować rozszerzenie do korzystania z KeeWeb?",
+  "setBrowserSessions": "Sesje",
+  "setBrowserSessionsEmpty": "Brak połączonych sesji.",
+  "setBrowserSessionsIntro": "Te rozszerzenia są teraz połączone z KeeWeb.",
+  "setBrowserSessionsActiveTooltip": "Sesja aktywna",
+  "setBrowserSessionsActiveText": "Ta sesja jest aktywna. Może wymieniać dane z KeeWeb na podstawie następujących uprawnień:",
+  "setBrowserSessionsInactiveTooltip": "Sesja nieaktywna",
+  "setBrowserSessionsInactiveText": "Ta sesja jest nieaktywna. Rozszerzenie jest połączone z KeeWeb, jednak nie próbowało wymieniać danych. Gdy rozszerzenie czegoś zażąda, będzie można wybrać, co udostępnić.",
+  "setBrowserSessionsDeniedTooltip": "Brak dostępu",
+  "setBrowserSessionsDeniedText": "Ta sesja jest nieaktywna. Rozszerzenie jest połączone z KeeWeb, jednak odmówiono dostępu do danych.",
+  "setBrowserSessionsConnectedDate": "Połączono",
+  "setBrowserSessionsTerminate": "Zakończ tę sesję",
+  "setBrowserSessionsAccessToFiles": "Zezwól na dostęp do plików",
+  "setBrowserSessionsNoFileAccess": "Rozszerzenie nie ma dostępu do żadnego pliku, nie będzie w stanie pobrać haseł z KeeWeb.",
+  "setBrowserSessionsPasswordsRead": "Hasła odczytane",
+  "setBrowserSessionsPasswordsWritten": "Hasła zapisane",
   "setDevicesTitle": "Urządzenia",
   "setDevicesEnableUsb": "Włącz interakcję z urządzeniami USB",
   "setDevicesYubiKeyIntro": "Zaleca się przeczytanie {} przed użyciem YubiKey.",
@@ -670,6 +708,8 @@
   "dropboxLinkFull": "Pełnym Dropboksem albo innym folderem",
   "dropboxLinkCustom": "Własną aplikacją Dropbox",
   "gdriveSharedWithMe": "Udostępnione dla mnie",
+  "gdriveSharedDrives": "Dyski współdzielone",
+  "gdriveTeamDrives": "Dyski zespołu",
   "webdavSaveMethod": "Metoda zapisu",
   "webdavSaveMove": "Prześlij tymczasowy plik i przenieś",
   "webdavSavePut": "Nadpisz plik KDBX za pomocą PUT",
@@ -698,5 +738,39 @@
   "yubiKeyDisabledErrorHeader": "USB jest wyłączone",
   "yubiKeyDisabledErrorBody": "YubiKey jest wymagany do otwarcia tego pliku, włącz urządzenia USB w ustawieniach.",
   "yubiKeyErrorWithCode": "Błąd YubiKey, kod {}.",
-  "bioOpenAuthPrompt": "otworzyć \"{}\""
+  "bioOpenAuthPrompt": "otworzyć \"{}\"",
+  "extensionErrorNoOpenFiles": "Brak otwartych plików",
+  "extensionErrorUserRejected": "Żądanie zostało odrzucone",
+  "extensionErrorNoMatches": "Brak pasujących loginów",
+  "extensionErrorAlertDisplayed": "Nie można teraz zadać pytania, ponieważ jest wyświetlane inne okno dialogowe. Spróbuj ponownie",
+  "extensionConnectHeader": "Wymiana danych rozszerzenia",
+  "extensionConnectIntro": "Rozszerzenie przeglądarki, które identyfikuje się jako {}, próbuje wymieniać dane z KeeWeb.",
+  "extensionConnectUnknownActivity": "KeeWeb nie weryfikuje, czy połączona aplikacja jest tym, za co się podaje. Zatwierdź żądanie tylko wtedy, gdy rozpoznajesz tę aktywność.",
+  "extensionConnectFiles": "W tej sesji zezwól na dostęp do:",
+  "extensionConnectAllOtherFiles": "Wszystkich innych plików",
+  "extensionConnectAllFiles": "Wszystkich plików",
+  "extensionConnectAskGet": "Pytaj przed zwróceniem haseł do rozszerzenia:",
+  "extensionConnectAskGetMultiple": "jeśli wystąpi więcej niż jedno dopasowanie",
+  "extensionConnectAskGetAlways": "zawsze",
+  "extensionConnectAskSave": "Zapytaj przed zapisaniem nowych haseł w KeeWeb:",
+  "extensionConnectAskSaveAlways": "zawsze",
+  "extensionConnectAskSaveAuto": "kiedy nie jest możliwe automatyczne zapisywanie",
+  "extensionConnectSettingsAreForSession": "Ustawienia wybrane tutaj obowiązują tylko dla aktywnej sesji. Możesz przeglądać sesje i zarządzać nimi w ustawieniach KeeWeb.",
+  "extensionUnlockMessage": "Odblokuj do połączenia rozszerzenia przeglądarki",
+  "extensionNewGroupHeader": "Nowa grupa",
+  "extensionNewGroupBody": "{} próbuje utworzyć nową grupę. Zezwolić na to?",
+  "extensionNewGroupPath": "Ścieżka grupy",
+  "extensionNewGroupFile": "Ta grupa zostanie utworzona w:",
+  "extensionSaveEntryHeader": "Zapisz hasło",
+  "extensionSaveEntryBody": "{} próbuje zapisać hasło. Zezwolić na to?",
+  "extensionSaveEntryAuto": "Automatyczne zapisywanie innych haseł w tej sesji",
+  "extensionSaveEntryNewGroup": "nowa grupa",
+  "extensionSelectPasswordFor": "Wybierz hasło dla {}",
+  "selectEntryHeader": "Wybierz wpis",
+  "selectEntryEnterHint": "użyj wyróżnionego wpisu",
+  "selectEntryTypingHint": "Zacznij pisać, aby filtrować",
+  "selectEntryContains": "Zawiera tekst",
+  "selectEntrySubdomains": "Subdomeny",
+  "selectEntryFieldHeader": "Wybierz pole",
+  "selectEntryFieldTouch": "Naciśnij przycisk na urządzeniu, aby wygenerować kod jednorazowy."
 }
