--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -14,6 +14,7 @@
   "or": "ou",
   "history": "histórico",
   "template": "modelo",
+  "templates": "modelos",
   "notImplemented": "Não implementado",
   "saveChanges": "Salvar alterações",
   "discardChanges": "Descartar alterações",
@@ -26,6 +27,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "erro",
+  "oneMinute": "um minuto",
+  "minutes": "{} minutos",
+  "oneHour": "uma hora",
+  "hours": "{} horas",
+  "oneDay": "um dia",
+  "days": "{} dias",
+  "oneWeek": "uma semana",
+  "oneMonth": "um mês",
+  "oneYear": "um ano",
   "cache": "cache",
   "file": "arquivo",
   "device": "Dispositivo",
@@ -37,24 +47,43 @@
   "menuColors": "Cores",
   "menuTrash": "Lixo",
   "menuSetGeneral": "Geral",
+  "menuSetBrowser": "Navegador",
   "menuSetAbout": "Sobre",
   "menuSetDevices": "Dispositivos",
-  "menuAlertNoTags": "Sem etiquetas",
+  "menuAlertNoTags": "Sem tags",
   "menuAlertNoTagsBody": "Você pode adicionar novas tags durante a edição de campos, na seção Tags.",
   "menuEmptyTrash": "Lixo",
-  "menuEmptyTrashAlert": "Esvaziar o Lixo?",
+  "menuEmptyTrashAlert": "Esvaziar a Lixeira?",
   "menuEmptyTrashAlertBody": "Você não será capaz de recuperar os itens",
   "menuItemCollapsed": "Clique duas vezes para expandir",
   "menuRestoreApp": "Abrir {}",
   "menuQuitApp": "Fechar {}",
+  "sysMenuAboutKeeWeb": "Sobre o {}",
+  "sysMenuServices": "Serviços",
+  "sysMenuHide": "Esconder o {}",
+  "sysMenuHideOthers": "Esconder outros",
+  "sysMenuUnhide": "Mostrar todos",
+  "sysMenuQuit": "Sair do {}",
+  "sysMenuEdit": "Editar",
+  "sysMenuUndo": "Desfazer",
+  "sysMenuRedo": "Refazer",
+  "sysMenuCut": "Cortar",
+  "sysMenuCopy": "Copiar",
+  "sysMenuPaste": "Colar",
+  "sysMenuSelectAll": "Selecionar tudo",
+  "sysMenuWindow": "Janela",
+  "sysMenuMinimize": "Minimizar",
+  "sysMenuClose": "Fechar janela",
   "alertYes": "Sim",
   "alertNo": "Não",
   "alertOk": "OK",
   "alertCancel": "Cancelar",
   "alertSignIn": "Entrar",
-  "alertCopy": "Cópiar",
+  "alertCopy": "Copiar",
   "alertClose": "Fechar",
   "alertDoNotAsk": "Não perguntar mais",
+  "alertAllow": "Permitir",
+  "alertDeny": "Negar",
   "appBeta": "AVISO: versão beta, apenas para inspeção",
   "footerOpen": "Abrir / Novo",
   "footerSyncError": "Erro de sincronização",
@@ -114,6 +143,7 @@
   "keyChangeMessageExpired": "A chave mestra para este banco de dados expirou. Por favor, insira uma nova chave",
   "keyChangeRepeatPassword": "Senha, mais uma vez",
   "keyEnter": "Entrar",
+  "keyEsc": "Esc",
   "iconFavTitle": "Faça o download e use o favicon do site",
   "iconSelCustom": "Selecionar ícone personalizado",
   "listEmptyTitle": "Vazio",
@@ -184,10 +214,12 @@
   "openConfigErrorNotFound": "Arquivo não encontrado",
   "openError": "Erro",
   "openErrorDescription": "Ocorreu um erro ao abrir o arquivo",
+  "openErrorDescriptionMaybeTouchIdChanged": "Esse erro é similar ao que acontece quando a configuração do Touch ID é alterada, por exemplo, quando você adiciona ou remove um dedo. Se esse é o caso, va nas Configurações, desabilite o Touch ID e habilite ele novamente.",
   "openErrorFileNotFound": "Arquivo",
   "openListErrorBody": "Ocorreu um erro ao carregar a lista de arquivos",
   "openShowAllFiles": "Mostrar todos",
   "openFileNoCacheError": "Arquivo não encontrado no armazenamento em cache. Isto pode acontecer porque o armazenamento do navegador foi limpo. Para abrir o arquivo, remova-o de KeeWeb e adicione-o novamente.",
+  "openChalRespHeader": "resposta-do-desafio",
   "openChalRespLoading": "Carregando a lista de YubiKeys",
   "openChalRespSelectYubiKey": "Selecione o YubiKey que você gostaria de usar",
   "openChalRespErrorEmpty": "Nenhum YubiKey encontrado.",
@@ -240,6 +272,7 @@
   "detMore": "mais",
   "detClickToAddField": "Clique para adicionar um novo campo",
   "detMenuAddNewField": "Adicionar novo campo",
+  "detMenuAddNewWebsite": "Adicionar outro website",
   "detMenuShowEmpty": "Mostrar campos vazios",
   "detMenuHideEmpty": "Ocultar campos vazios",
   "detMenuAddField": "Adicionar {}",
@@ -291,22 +324,29 @@
   "detIssuePwnedPassword": "Essa senha foi comprometida em um vazamento de acordo com {}, é recomendado que mude-a",
   "detIssuePasswordCheckError": "Houve um erro ao checar a força da sua senha",
   "detIssueOldPassword": "A senha é antiga.",
+  "detIssueCloseAlertHeader": "esconda problemas de senhas",
+  "detIssueCloseAlertBody": "Existem diferentes maneiras de esconder esse aviso:",
+  "detIssueCloseAlertEntry": "Não mostre para essa entrada",
+  "detIssueCloseAlertSettings": "Ajuste configurações globais",
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Modificar teclas",
   "autoTypeKeys": "Chaves",
   "autoTypeLink": "mais...",
   "autoTypeError": "Erro de auto-teclar",
   "autoTypeErrorGeneric": "Ocorreu um erro ao executar auto-teclar: {}",
+  "autoTypeErrorAccessibilityMacOS": "Tentamos mandar as teclas apertadas para a aplicação, mas parece que isso não está funcionando. Isso pode acontecer por falta de permissões, clique aqui para ler mais sobre isso:",
   "autoTypeErrorGlobal": "Para usar o atalho para todo o sistema, foque o aplicativo onde deseja digitar sua senha",
   "autoTypeErrorNotInstalled": "{} não está instalado",
   "autoTypeHeader": "Auto-teclar: selecione",
   "autoTypeMsgNoWindow": "Não foi possível obter o título da janela ativa, comece a digitar para pesquisar",
   "autoTypeMsgMatchedByWindow": "Selecione uma senha para {}",
   "autoTypeNoMatches": "sem combinações",
+  "autoTypeSelectionHint": "Digite a sequência de auto-teclar",
   "autoTypeSelectionHintAction": "Escreva apenas a senha",
   "autoTypeSelectionHintOpt": "Escreva apenas o nome de usuário",
   "autoTypeSelectionHintShift": "Outros campos",
   "autoTypeSelectionOtp": "Senha única",
+  "autoTypeUnlockMessage": "Desbloquear para o auto-preenchimento",
   "appSecWarn": "Não seguro!",
   "appSecWarnBody1": "Você carregou este aplicativo com conexão insegura. Alguém pode estar observando você e roubando suas senhas. Recomendamos que você pare, a menos que você entenda claramente o que está fazendo.",
   "appSecWarnBody2": "Sim, seu banco de dados é criptografado, mas ninguém pode garantir que o aplicativo não foi modificado no caminho para você.",
@@ -363,11 +403,20 @@
   "setGenThemeBlue": "Azul escuro",
   "setGenThemeFb": "Azul plano",
   "setGenThemeBl": "Azul claro",
+  "setGenThemeBrown": "Brownie",
   "setGenThemeDb": "Marrom escuro",
+  "setGenThemeLb": "Marrom claro",
+  "setGenThemeTerminal": "Terminal",
   "setGenThemeTe": "Terminal",
+  "setGenThemeLt": "Terminal claro",
+  "setGenThemeHighContrast": "Alto contraste",
   "setGenThemeHc": "Alto contraste",
+  "setGenThemeDc": "Contraste escuro",
+  "setGenThemeSol": "Solarized",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
+  "setGenMoreThemes": "Mais temas",
+  "setGenAutoSwitchTheme": "Trocar automaticamente entre os temas claro e escuro quando possível",
   "setGenLocale": "Língua",
   "setGenLocOther": "Outros idiomas estão disponíveis como plugins",
   "setGenFontSize": "Tamanho da fonte",
@@ -404,12 +453,15 @@
   "setGenClearSeconds": "Em {} segundos",
   "setGenClearMinute": "Em 1 minuto",
   "setGenMinInstead": "Minimizar aplicativo em vez de fechar",
+  "setGenMinOnFieldCopy": "Minizar ao copiar o campo",
   "setGenLock": "Bloqueio automático",
   "setGenLockMinimize": "Bloquear automaticamente ao minimizar",
   "setGenLockCopy": "Bloquear automaticamente ao copiar uma senha",
   "setGenLockAutoType": "Auto bloquear ao auto-teclar",
   "setGenLockOrSleep": "Quando o computador estiver bloqueado ou for hibernado",
   "setGenStorage": "Armazenamento",
+  "setGenDisableOfflineStorage": "Não fazer cache dos arquivos carregados no armazenamento offline",
+  "setGenShortLivedStorageToken": "usar seções de vida curta em provedores de armazenamento em nuvem",
   "setGenStorageLogout": "Sair",
   "setGenShowAdvanced": "Mostrar configurações avançadas",
   "setGenDevTools": "Mostar ferramenta para desenvolvedores",
@@ -419,6 +471,11 @@
   "setGenShowAppLogs": "Mostrar logs",
   "setGenReloadApp": "Recarregar o aplicativo",
   "setGenFieldLabelDblClickAutoType": "Preencher automaticamente ao dar clique duplo nos campos.",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Não usar o Touch ID",
+  "setGenTouchIdMemory": "Desbloquear com o Touch ID enquanto o KeeWeb estiver rodando",
+  "setGenTouchIdFile": "Sempre usar o Touch ID ao invés da senha mestra",
+  "setGenTouchIdPass": "Exigir a senha mestra após",
   "setGenAudit": "Verificar",
   "setGenAuditPasswords": "Mostrar alertas sobre complexidade de senha",
   "setGenAuditPasswordEntropy": "Checar tamanho da senha e aleatoriedade.",
@@ -503,8 +560,10 @@
   "setFileExportRawBody": "O arquivo exportado irá conter suas senhas, lá elas não serão criptografadas. Deseja prosseguir?",
   "setFileDeviceIntro": "códigos únicos através do {} serão mostradas no app.",
   "setFileDeviceSettings": "Configurações",
+  "setFileYubiKey": "YoubiKey",
   "setFileDontUseYubiKey": "Não utilizar o YubiKey",
   "setFileRefreshYubiKeyList": "Atualizar a lista",
+  "setFileYubiKeyHeader": "YubiKey",
   "setFileYubiKeyBody": "Utilizando o YubiKey como parte da senha mestre é perigoso e poderá acarretar em perda de acesso às suas senhas caso acontecer algo de errado. Certifique de realizar o backup de seus arquivos antes de alterar essa configuração.",
   "setFileYubiKeyErrorEmptyMac": "Parece que você tem um YubiKey conectado, mas não está visível. KeeWeb precisa ser adicionado ao monitoramento de entrada, nas configurações para que tenha acesso ao YubiKey",
   "setShTitle": "Atalhos",
@@ -525,9 +584,11 @@
   "setShGen": "gera senha",
   "setShSet": "config. do aplicativo",
   "setShCopyPassGlobal": "copia a senha (com o aplicativo em segundo plano)",
+  "setShCopyOtp": "copiar o OTP",
   "setShAutoTypeGlobal": "auto-teclar (com o aplicativo em segundo plano)",
   "setShCopyPassOnly": "Copiar senha",
   "setShRestoreApp": "abrir {}",
+  "setShGlobal": "Esses atalhos de sistema funcionam quando o app está rodando em segundo plano. Você pode clicar neles para selecionar o seu próprio atalho",
   "setShLock": "trava a base de dados",
   "setShEdit": "Pressione uma nova combinação chave e defina como um atalho",
   "setPlInstallTitle": "Instalar novos plugins",
@@ -560,12 +621,27 @@
   "setPlTranslateLink": "traduzir o aplicativo para sua linguagem",
   "setPlAutoUpdate": "Atualizar automaticamente",
   "setPlLoadGallery": "Carregar a galeria de plugins",
+  "setBrowserTitle": "Navegador",
   "setDevicesTitle": "Dispositivos",
   "setDevicesEnableUsb": "Habilitar interação com dispositivos USB",
+  "setDevicesYubiKeyIntro": "É recomendado ler {} antes de começar a usar a YubiKey.",
+  "setDevicesYubiKeyIntroLink": "esse documento",
+  "setDevicesYubiKeyToolsDesc": "Para conseguir usar a YubiKey nesse modo, você precisa instalar uma ferramenta chamada {}",
+  "setDevicesYubiKeyToolsDesc2": "{} para conseguir mais informações sobre essa ferramenta",
   "setDevicesYubiKeyToolsDescLink": "Clique aqui",
   "setDevicesYubiKeyToolsStatusChecking": "Checando se {} está instalado",
   "setDevicesYubiKeyToolsStatusOk": "{} está instalado",
+  "setDevicesYubiKeyToolsStatusError": "{} não está instalado ou não está funcionando",
+  "setDevicesYubiKeyOtpTitle": "Códigos de uso único",
+  "setDevicesYubiKeyOtpDesc": "A YubiKey pode ser usada para gerar códigos de uso único para diferentes serviços.",
   "setDevicesYubiKeyOtpShowIcon": "Mostrar ícone na tela inicial",
+  "setDevicesYubiKeyOtpAutoOpen": "Carregar automaticamente códigos de uso único quando houverem arquivos abertos",
+  "setDevicesYubiKeyOtpMatchEntries": "Mostrar códigos de uso único correspondentes em entradas",
+  "setDevicesYubiKeyChalRespTitle": "Resposta-do-desafio",
+  "setDevicesYubiKeyChalRespDesc": "Também é possível usar uma YubiKey no modo resposta-do-desafio, para que um pedaço da chave privada usada para criptografar arquivos fique em uma YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Mostrar a opção de usar uma YubiKey ao abrir arquivos",
+  "setDevicesYubiKeyStuckWorkaround": "Reconectar a YubiKey se parecer travada durante o carregamento",
+  "setDevicesYubiKeyRememberChalResp": "Lembrar a resposta-do-desafio enqunto o app estiver aberto",
   "setAboutTitle": "Sobre",
   "setAboutBuilt": "Este aplicativo foi criado com essas ferramentas incríveis",
   "setAboutLic": "Licença",
@@ -589,6 +665,9 @@
   "dropboxSetupDesc": "É necessária alguma configuração para usar o Dropbox no aplicativo autônomo. Crie seu próprio aplicativo Dropbox e preencha sua chave abaixo.",
   "dropboxAppKey": "Chave do aplicativo Dropbox",
   "dropboxAppKeyDesc": "Copie a chave do seu aplicativo Dropbox (Configurações do desenvolvedor)",
+  "dropboxAppKeyHint": "sua chave do aplicativo Dropbox",
+  "dropboxAppSecret": "Segredo do aplicativo Dropbox",
+  "dropboxAppSecretDesc": "O segredo pode ser encontrado próximo à chave do aplicativo Dropbox",
   "dropboxFolder": "Pasta da aplicação",
   "dropboxFolderDesc": "Se o seu aplicativo estiver vinculado ao Dropbox inteiro (não a pasta do aplicativo), defina a pasta com seus arquivos kdbx aqui",
   "dropboxFolderSettingsDesc": "Selecione qualquer pasta no seu Dropbox onde os arquivos serão armazenados (pasta raiz por padrão)",
@@ -601,6 +680,8 @@
   "webdavSaveMethod": "Salvar método",
   "webdavSaveMove": "Carregar um arquivo temporário e mover",
   "webdavSavePut": "Sobrescreva o arquivo kdbx com PUT",
+  "webdavNoLastModified": "Cabeçalho HTTP \"Last-Modified\" está ausente",
+  "webdavStatReload": "Sempre recarregue o arquivo em vez de confiar no cabeçalho HTTP \"Last-Modified\"",
   "launcherSave": "Salvar banco de dados de senhas",
   "launcherFileFilter": "Arquivos KeePass",
   "authPopupRequired": "Pop-ups estão bloqueadas",
@@ -614,5 +695,15 @@
   "importCsvRun": "Importar",
   "importIgnoreField": "Ignorar",
   "importTo": "Entradas serão importadas para",
-  "importNewFile": "Novo arquivo"
+  "importNewFile": "Novo arquivo",
+  "yubiKeyStuckError": "A YubiKey parece estar travada, o reparo automático pode ser habilitado nas configurações do app.",
+  "yubiKeyNoKeyHeader": "A YubiKey é obrigatória",
+  "yubiKeyNoKeyBody": "Por favor insira sua YubiKey com o número de série {}",
+  "yubiKeySlot": "espaço",
+  "yubiKeyTouchRequestedHeader": "Toque sua YubiKey",
+  "yubiKeyTouchRequestedBody": "Por favor, toque sua YubiKey com o número de série {}",
+  "yubiKeyDisabledErrorHeader": "O USB está desabilitado",
+  "yubiKeyDisabledErrorBody": "A YubiKey é obrigatória para abrir esse arquivo, por favor habilite dispositivos USB nas configurações.",
+  "yubiKeyErrorWithCode": "Erro na YubiKey, código {}",
+  "bioOpenAuthPrompt": "abrir \"{}\""
 }
