--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -14,6 +14,7 @@
   "or": "ya da",
   "history": "Geçmiş",
   "template": "Şablon",
+  "templates": "Şablonlar",
   "notImplemented": "Uygulanmadı",
   "saveChanges": "Değişiklikleri kaydet",
   "discardChanges": "Değişiklikleri yoksay",
@@ -26,6 +27,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "hata",
+  "oneMinute": "bir dakika",
+  "minutes": "{} dakika",
+  "oneHour": "bir saat",
+  "hours": "{} saat",
+  "oneDay": "bir gün",
+  "days": "{} gün",
+  "oneWeek": "bir hafta",
+  "oneMonth": "bir ay",
+  "oneYear": "bir yıl",
   "cache": "Önbellek",
   "file": "Dosya",
   "device": "cihaz",
@@ -37,6 +47,7 @@
   "menuColors": "Renkler",
   "menuTrash": "Çöp",
   "menuSetGeneral": "Genel",
+  "menuSetBrowser": "Tarayıcı",
   "menuSetAbout": "Hakkında",
   "menuSetDevices": "Cihazlar",
   "menuAlertNoTags": "Etiket yok",
@@ -47,6 +58,20 @@
   "menuItemCollapsed": "Genişletmek için çift tıkla",
   "menuRestoreApp": "Aç {}",
   "menuQuitApp": "Çık {}",
+  "sysMenuAboutKeeWeb": "Hakkında {}",
+  "sysMenuServices": "Servisler",
+  "sysMenuHide": "Gizle {}",
+  "sysMenuHideOthers": "Diğerlerini Gizle",
+  "sysMenuUnhide": "Tümünü Göster",
+  "sysMenuQuit": "Çık {}",
+  "sysMenuEdit": "Düzenle",
+  "sysMenuCut": "Kes",
+  "sysMenuCopy": "Kopyala",
+  "sysMenuPaste": "Yapıştır",
+  "sysMenuSelectAll": "Tümünü Seç",
+  "sysMenuWindow": "Pencere",
+  "sysMenuMinimize": "Küçült",
+  "sysMenuClose": "Pencereyi Kapat",
   "alertYes": "Evet",
   "alertNo": "Hayır",
   "alertOk": "Tamam",
@@ -55,6 +80,8 @@
   "alertCopy": "Kopyala",
   "alertClose": "Kapat",
   "alertDoNotAsk": "Tekrar sorma",
+  "alertAllow": "İzin Ver",
+  "alertDeny": "Reddet",
   "appBeta": "UYARI: deneme sürümüdür, sadece izlenim edinmek içindir.",
   "footerOpen": "Aç / Yeni",
   "footerSyncError": "Eşitleme hatası",
@@ -114,6 +141,7 @@
   "keyChangeMessageExpired": "Bu veritabanı anahtarının süresi doldu. Lütfen yeni bir anahtar seçin",
   "keyChangeRepeatPassword": "Şifre, bir kez daha",
   "keyEnter": "Gir",
+  "keyEsc": "Esc",
   "iconFavTitle": "Site simgesini indir ve kullan",
   "iconSelCustom": "Özel simge seç",
   "listEmptyTitle": "Boş",
@@ -184,6 +212,7 @@
   "openConfigErrorNotFound": "Dosya bulunamadı",
   "openError": "Hata",
   "openErrorDescription": "Dosya açılırken bir hata oluştu",
+  "openErrorDescriptionMaybeTouchIdChanged": "Hata, Touch ID ayarı değiştirildiğinde genellikle olana benzer, örneğin ek bir parmak eklediyseniz veya çıkardıysanız. Durum buysa, Ayarlar'a gidin, Touch ID'yi devre dışı bırakın ve yeniden etkinleştirin.",
   "openErrorFileNotFound": "Dosya bulunamadı",
   "openListErrorBody": "Dosya listesi yüklenirken bir hata yaşandı",
   "openShowAllFiles": "Tüm dosyaları göster",
@@ -241,6 +270,7 @@
   "detMore": "daha fazla",
   "detClickToAddField": "yeni bir alan eklemek için tıklayın",
   "detMenuAddNewField": "Yeni alan ekle",
+  "detMenuAddNewWebsite": "Başka bir web sitesi ekle",
   "detMenuShowEmpty": "Boş alanları göster",
   "detMenuHideEmpty": "Boş alanları gizle",
   "detMenuAddField": "Ekle {}",
@@ -286,12 +316,23 @@
   "detRevealField": "Göster",
   "detHideField": "Gizle",
   "detAutoTypeField": "Otomatik yazım",
+  "detIssuesHideTooltip": "Bu uyarıyı gizle",
+  "detIssueWeakPassword": "Parola zayıf, değiştirmeniz önerilir.",
+  "detIssuePoorPassword": "Parola çok zayıf, değiştirilmesi şiddetle tavsiye edilir.",
+  "detIssuePwnedPassword": "Bu parola, {} uyarınca bir veri ihlalinde ifşa edildi, değiştirilmesi önerilir.",
+  "detIssuePasswordCheckError": "Çevrimiçi parola gücü kontrol edilirken bir hata oluştu.",
+  "detIssueOldPassword": "Parola eski.",
+  "detIssueCloseAlertHeader": "Parola sorunlarını gizle",
+  "detIssueCloseAlertBody": "Bu uyarıyı gizlemenin farklı yolları vardır:",
+  "detIssueCloseAlertEntry": "Bu giriş için gösterme",
+  "detIssueCloseAlertSettings": "Genel ayarları yapın",
   "autoTypeEntryFields": "Girdi alanları",
   "autoTypeModifiers": "Tuşları değiştir",
   "autoTypeKeys": "Tuşlar",
   "autoTypeLink": "daha fazla...",
   "autoTypeError": "Otomatik yazım hatası",
   "autoTypeErrorGeneric": "Otomatik yazım uygulanırken bir hata var: {}",
+  "autoTypeErrorAccessibilityMacOS": "Uygulamaya tuş vuruşlarını göndermeye çalıştık, ancak işe yaramadı. Bu, eksik izinler nedeniyle olabilir, daha fazlasını okumak için burayı tıklayın:",
   "autoTypeErrorGlobal": "Sistem genelinde bir kısayol kullanmak için, lütfen parolanızı yazmak istediğiniz uygulamaya odaklanın",
   "autoTypeErrorNotInstalled": "{} yüklü değil",
   "autoTypeHeader": "Otomatik Yazım: Seç",
@@ -303,6 +344,7 @@
   "autoTypeSelectionHintOpt": "Sadece kullanıcı adınızı yazın",
   "autoTypeSelectionHintShift": "Diğer alanlar",
   "autoTypeSelectionOtp": "Tek kullanımlık kod",
+  "autoTypeUnlockMessage": "Otomatik yazmak için kilidi açın",
   "appSecWarn": "Güvenli Değil!",
   "appSecWarnBody1": "Uygulamayı güvensiz bir bağlantı ile yüklediniz. Birileri sizi izliyor ve şifrenizi çalmaya çalışıyor olabilir. Eğer tam olarak ne yapacağını anlamadıysanız, uygulamayı durdurmanızı önemle tavsiye ediyoruz.",
   "appSecWarnBody2": "Evet, veritabanı şifrelenmiş durumda, ancak hiç kimse size uygulamanın değiştirilmediğini garanti edemez.",
